@@ -1,8 +1,10 @@
-Update GLUtils.java on adding new versions
+Update Versions.java on adding new versions
 
 1.0.0
 Release
 Rename `MeshVar` to `MeshMacro`
+More docs
+New feature: `Versions`
 
 0.9.0
 Beta
